[package]
name = "kernel"
version = "0.1.0"
authors = ["Ben Parli <bparli@gmail.com>"]
edition = "2018"

# The features section is used to select the target board.
[features]
default = []

[dependencies]
qemu-exit = "0.1.x"
test-types = { path = "test-types" }
cortex-a = { version = "3.0.x" }
register = { version = "0.5.x", features=["no_std_unit_tests"] }
spin = "0.5"
linked_list_allocator = "0.8"
smoltcp = { version = "0.6", default-features = false, features = ["alloc", "ethernet", "socket-tcp", "proto-ipv4", "log", "verbose"] }


##--------------------------------------------------------------------------------------------------
## Testing
##--------------------------------------------------------------------------------------------------

[dev-dependencies]
test-macros = { path = "test-macros" }

# Unit tests are done in the library part of the kernel.
[lib]
name = "libkernel"
test = true

# Disable unit tests for the kernel binary.
[[bin]]
name = "kernel"
test = false

# List of tests without harness.
[[test]]
name = "00_console_sanity"
harness = false

[[test]]
name = "02_exception_sync_page_fault"
harness = false
